samples/_failures_safe/1761078000_0ac940_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18c35af0.c: In function ‘main’:
./samples/SAFE/__tmp_18c35af0.c:149:5: error: expected identifier at end of input
  149 |     if (matA.cols == matB.
      |     ^~
./samples/SAFE/__tmp_18c35af0.c:149:5: error: expected declaration or statement at end of input
